--- a/styles/about.css
+++ b/styles/about.css
@@ -45,7 +45,7 @@
     flex-direction: column;
     align-items: center;
     gap: 50px;
-    margin-top: 50px;
+    padding-top: 20px;
     color: var(--white);
     text-align: justify;
     font-style: italic;
@@ -80,6 +80,8 @@
 
 .about-skill-content img {
     width: 50px;
+    height: 50px;
+    object-fit: contain;
 }
 
 @media (min-width: 640px) {
