--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,20 +1,3 @@
-:root {
-    --black: #0A0A0A;
-    --white: #F5F5F5;
-
-    --Neue: "Neue"
-}
-
-html {
-    scroll-behavior: smooth;
-}
-
-body {
-    margin: 0;
-    font-family: var(--Neue);
-    background-color: var(--black);
-}
-
 @font-face {
     font-family: 'Neue';
     src: url('/styles/fonts/NeueHaasDisplayXThin.ttf') format('truetype');
@@ -95,22 +78,6 @@ body {
     font-display: swap;
 }
 
-@font-face {
-    font-family: 'Neue';
-    src: url('/styles/fonts/NeueHaasDisplayBold.ttf') format('truetype');
-    font-weight: 700;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Neue';
-    src: url('/styles/fonts/NeueHaasDisplayBoldItalic.ttf') format('truetype');
-    font-weight: 700;
-    font-style: italic;
-    font-display: swap;
-}
-
 .navbar {
     position: fixed;
     top: 0;
@@ -151,8 +118,8 @@ body {
 }
 
 .navbar .logo {
-    width: 80px;
-    height: 60px;
+    max-height: 70px;
+    width: auto;
 }
 
 .navbar-hamburger {
@@ -239,8 +206,8 @@ body {
     bottom: 100px;
     left: 50%;
     transform: translateX(-50%);
-    width: 200px;
-    height: 150px;
+    max-width: 200px;
+    height: auto;
 }
 
 .footer {
